--- a/ghost/admin/app/components/editor/modals/preview.hbs
+++ b/ghost/admin/app/components/editor/modals/preview.hbs
@@ -51,8 +51,8 @@
                         <GhTaskButton
                             @task={{this.copyPreviewUrlTask}}
                             @idleIcon="copy"
-                            @buttonText="Copy draft link"
-                            @runningText="Copy draft link"
+                            @buttonText="Copy preview link"
+                            @runningText="Copy preview link"
                             @successText="Copied"
                             @class="gh-btn gh-btn-icon gh-btn-preview gh-post-copy-url"
                             data-test-button="copy-draft-link"
