Fixed selects not closing when clicking preview iframes
no issue

- added `{{close-dropdowns-on-click}}` modifier
  - handles usage on normal elements and iframes by attaching event handler to iframe content document when used on an iframe
- updated all preview modal iframes to use the modifier

--- a/ghost/admin/app/components/editor/modals/preview/email.hbs
+++ b/ghost/admin/app/components/editor/modals/preview/email.hbs
@@ -94,6 +94,7 @@
                 sandbox="allow-same-origin allow-popups allow-popups-to-escape-sandbox"
                 {{did-insert this.renderEmailPreview}}
                 {{did-update this.renderEmailPreview @memberSegment}}
+                {{close-dropdowns-on-click}}
             ></iframe>
         </div>
     </div>
