Fixed share dropdown not closing when audience dropdown opened
no issue

- select dropdowns do not automatically close other dropdowns because sometimes we have dropdowns inside dropdowns
- added explicit dropdown close to the preview-as select's `@onOpen` argument

--- a/ghost/admin/app/components/editor/modals/preview.hbs
+++ b/ghost/admin/app/components/editor/modals/preview.hbs
@@ -27,6 +27,7 @@
                     @triggerClass="gh-preview-segment-trigger"
                     @dropdownClass="gh-preview-segment-dropdown"
                     @matchTriggerWidth={{false}}
+                    @onOpen={{this.dropdown.closeDropdowns}}
                     as |option|
                 >
                     {{option.label}}
