Made several style updates to the post preview modal
No ref
- Aligned preview-segment dropdown with other Admin dropdowns
- Updated typgraphy of Post settings menu to be aligned with modal titles
- Switched around Preview and Close buttons in Publish Flow modal to be consistent with the Preview modal

--- a/ghost/admin/app/styles/components/power-select.css
+++ b/ghost/admin/app/styles/components/power-select.css
@@ -93,6 +93,10 @@
     background: transparent;
 }
 
+.ember-power-select-option[aria-selected="true"]:hover {
+    background: color-mod(var(--whitegrey) a(60%) s(-12%));
+}
+
 .ember-power-select-options:not([role="group"]) {
     max-height: 50vh;
     width: 100%;
