Updated the style of the share dropdown in the preview modal
No ref
- This way, the dropdown styles are aligned with the preview-segment dropdown

--- a/ghost/admin/app/components/editor/modals/preview.hbs
+++ b/ghost/admin/app/components/editor/modals/preview.hbs
@@ -55,6 +55,7 @@
                             @buttonText="Copy preview link"
                             @runningText="Copy preview link"
                             @successText="Copied"
+                            @successClass=""
                             @class="gh-btn gh-btn-icon gh-btn-preview gh-post-copy-url"
                             data-test-button="copy-draft-link"
                         />
