--- a/ghost/admin/app/components/editor/modals/preview/email/email-subject.hbs
+++ b/ghost/admin/app/components/editor/modals/preview/email/email-subject.hbs
@@ -1,16 +1,19 @@
 <div class="gh-email-subject">
-    {{#if @mobile}}
-        <p class="gh-preview-email-subject-text">{{this.subject}}</p>
-    {{else}}
+    {{#if this.isEditing}}
         <input
             aria-label="Email subject"
             type="text"
-            class="gh-input gh-input-x"
+            class="gh-input gh-preview-email-subject-input"
             placeholder={{truncate @post.title 40}}
             value={{this.subject}}
             {{on "blur" this.setSubject}}
             {{on-key "Enter" this.setSubject}}
+            {{autofocus}}
         />
+    {{else}}
+        <button class="gh-preview-email-subject" type="button" {{on "click" this.editSubject}}>
+            {{this.subject}} {{svg-jar "pen"}}
+        </button>
     {{/if}}
 
     <div class="error">
