--- a/ghost/admin/app/components/editor/modals/update-flow.hbs
+++ b/ghost/admin/app/components/editor/modals/update-flow.hbs
@@ -1,16 +1,21 @@
-{{#let @data.publishOptions.post as |post|}}
-    <div class="flex flex-column h-100 items-center overflow-auto" data-test-modal="update-flow">
-        <header class="gh-publish-header">
-            <h2>{{if post.isScheduled "Unschedule" "Unpublish"}}</h2>
-            <div class="flex">
+<div class="flex flex-column h-100 items-center overflow-auto" data-test-modal="update-flow">
+    <header class="gh-publish-header">
+        <button class="gh-btn-editor gh-publish-back-button" title="Close" type="button" {{on "click" @close}}>
+            <span>{{svg-jar "arrow-left"}} Editor</span>
+        </button>
+        <div class="flex">
+            {{#let @data.publishOptions.post as |post|}}
                 {{#if (not (and post.isSent (not post.isPublished)))}}
-                    <button class="gh-btn" title="Close" type="button" {{on "click" @close}}>
-                        <span>Close</span>
+                    <button class="gh-btn gh-btn-editor darkgrey gh-unpublish-trigger active" title="Close" type="button" {{on "click" @close}}>
+                        <span>{{if post.isScheduled "Unschedule" "Unpublish"}}</span>
                     </button>
                 {{/if}}
-            </div>
-        </header>
+            {{/let}}
+            <div class="settings-menu-toggle-spacer"></div>
+        </div>
+    </header>
 
+    {{#let @data.publishOptions.post as |post|}}
         <div class="gh-publish-settings-container gh-update-flow fade-in">
             <div class="gh-publish-title" data-test-update-flow-title>
                 {{#if (and post.isSent (not post.isPublished))}}
@@ -102,5 +107,5 @@
                 </p>
             </div>
         </div>
-    </div>
-{{/let}}
+    {{/let}}
+</div>
