--- a/ghost/admin/app/styles/components/publishmenu.css
+++ b/ghost/admin/app/styles/components/publishmenu.css
@@ -3,7 +3,7 @@
 
 .gh-publish-trigger,
 .gh-unpublish-trigger {
-    height: 34px;
+    height: max-content;
     cursor: pointer;
 }
 
@@ -220,7 +220,7 @@
     justify-content: space-between;
     height: 34px;
     padding: 0;
-    margin: 1.2rem 2rem;
+    margin: 30px;
     z-index: 799;
 }
 
@@ -242,12 +242,6 @@
     .gh-publish-header .mobile {
         margin-left: 5px;
     }
-}
-
-.gh-publish-header .gh-btn-group-right {
-    display: flex;
-    align-items: center;
-    gap: .8rem;
 }
 
 .gh-publish-back-button {
