--- a/ghost/admin/app/styles/layouts/preview-email.css
+++ b/ghost/admin/app/styles/layouts/preview-email.css
@@ -139,26 +139,13 @@
 }
 
 .gh-email-preview-newsletter-select p.gh-preview-newsletter-name {
-    display: flex;
-    align-items: center;
-    gap: 4px;
-    margin: 0;
-    min-height: 38px;
-    padding: 4px 0;
-    line-height: 1.15;
-}
-
-.gh-post-preview-email-mockup-mobile p.gh-preview-newsletter-name {
-    min-height: unset;
-    font-size: 1.3rem;
+    color: var(--darkgrey);
+    font-weight: 600;
 }
 
 p .gh-preview-email-address {
-    color: var(--midgrey-l1);
-}
-
-.gh-post-preview-email-mockup-mobile .gh-preview-email-address {
-    display: none;
+    color: var(--midlightgrey);
+    font-weight: 500;
 }
 
 .gh-preview-email-subject {
@@ -193,13 +180,22 @@ p .gh-preview-email-address {
     stroke-width: 2px;
 }
 
-.gh-preview-email-subject-text {
-    margin: 0;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 1;
-    font-size: 1.3rem;
+.gh-preview-email-subject-input {
+    width: 100%;
+    height: 25px;
+    border: 0;
+    border-radius: 0;
+    background: transparent;
+    padding: 0;
+    color: var(--black);
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.8em;
+}
+
+.gh-preview-email-subject-input:focus {
+    background: transparent;
+    box-shadow: inset 0 -1px 0 var(--lightgrey-l1);
 }
 
 .gh-email-subject {
@@ -217,7 +213,7 @@ p .gh-preview-email-address {
     flex-direction: column;
     flex-grow: 1;
     align-items: center;
-    background: var(--whitegrey-l2);
+    background: var(--white);
     padding: 8vmin 30px 30px;
     height: calc(100vh - 119px);
     border-bottom-left-radius: 5px;
@@ -227,9 +223,9 @@ p .gh-preview-email-address {
 .gh-pe-mobile-bezel {
     width: 320px;
     height: 657px;
-    border-radius: 32px;
+    border-radius: 40px;
     display: flex;
-    background: var(--white);
+    background: var(--whitegrey-l2);
     box-shadow:
         0 0 0 1px rgba(0,0,0,0.02),
         0 2.8px 2.2px rgba(0, 0, 0, 0.02),
@@ -243,10 +239,10 @@ p .gh-preview-email-address {
 
 .gh-pe-mobile-screen {
     width: 100%;
-    margin: 12px;
+    margin: 14px;
     border: 1px solid var(--whitegrey-l1);
     background: var(--white);
-    border-radius: 24px;
+    border-radius: 28px;
     flex-grow: 1;
     overflow: hidden;
     -webkit-mask-image: -webkit-radial-gradient(white, black);
@@ -257,7 +253,7 @@ p .gh-preview-email-address {
     transform: scale(0.8);
     transform-origin: 0 0;
     overflow-x: hidden;
-    width: 368px;
+    width: 361px;
     height: 706px;
 }
 
