--- a/ghost/admin/app/styles/patterns/buttons.css
+++ b/ghost/admin/app/styles/patterns/buttons.css
@@ -438,7 +438,7 @@ Usage: CTA buttons grouped together horizontally.
     box-shadow: none;
     margin: 2px;
     border-radius: 2px;
-    color: var(--midgrey-l1);
+    color: var(--midgrey);
 }
 
 .gh-btn-group .gh-btn span {
