change mail template url to custom front end URL, you must set FRONT_END_URL environment

--- a/ghost/core/core/server/services/mail/templates/raw/reset-password.html
+++ b/ghost/core/core/server/services/mail/templates/raw/reset-password.html
@@ -94,7 +94,7 @@
 
                                         <!-- START OF EMAIL CONTENT -->
                                         <p><strong>Hello!</strong></p>
-                                        <p>A request has been made to reset your password on <a href="{{ siteUrl }}">{{ siteUrl }}</a>.</p>
+                                        <p>A request has been made to reset your password on <a href="{{siteUrl.replace(/.*ghost/, process.env.FRONT_END_URL)}}">{{siteUrl.replace(/.*ghost/, process.env.FRONT_END_URL)}}</a>.</p>
                                         <p>Please follow the link below to reset your password:<br><br>  <a href="{{ resetUrl }}">Click here to reset your password</a></p>
                                         <p><i>If you did not request a password reset, it's safe to ignore this email.</i></p>
                                         <p>Ghost</p>
@@ -108,7 +108,7 @@
                             <table class="footer" width="100%" border="0" cellspacing="0" cellpadding="0">
                                 <tr>
                                     <td class="footer-cell" align="right">
-                                        Sent by <a href="{{siteUrl}}">{{siteUrl}}</a>
+                                        Sent by <a href="{{siteUrl.replace(/.*ghost/, process.env.FRONT_END_URL)}}">{{siteUrl.replace(/.*ghost/, process.env.FRONT_END_URL)}}</a>
                                     </td>
                                 </tr>
                             </table>
