--- a/ghost/core/core/server/services/mail/templates/raw/invite-user.html
+++ b/ghost/core/core/server/services/mail/templates/raw/invite-user.html
@@ -95,7 +95,7 @@
                                         <!-- START OF EMAIL CONTENT -->
                                         <h1>Welcome</h1>
                                         <p><strong>{{blogName}}</strong> is using Ghost to publish things on the internet! {{invitedByName}} has invited you to join. Please click on the link below to activate your account.</p>
-                                        <p><a href="{{resetLink}}">Click here to activate your account</a></p>
+                                        <p><a href="{{resetLink.replace(/.*ghost/, process.env.FRONT_END_URL)}}">Click here to activate your account</a></p>
                                         <p><strong>No idea what Ghost is?</strong> It's a simple, beautiful platform for running an online blog or publication. Writers, businesses and individuals from all over the world use Ghost to publish their stories and ideas. <a href="http://ghost.org">Find out more</a>.</p>
                                         <p>If you have trouble activating your {{blogName}} account, you can reach out to {{invitedByName}} on {{invitedByEmail}} for assistance.</p>
                                         <p>Have fun, and good luck!</p>
@@ -109,7 +109,7 @@
                             <table class="footer" width="100%" border="0" cellspacing="0" cellpadding="0">
                                 <tr>
                                     <td class="footer-cell" align="right">
-                                        Sent by <a href="{{siteUrl}}">{{siteUrl}}</a>
+                                        Sent by <a href="{{siteUrl.replace(/.*ghost/, process.env.FRONT_END_URL)}}">{{siteUrl.replace(/.*ghost/, process.env.FRONT_END_URL)}}</a>
                                     </td>
                                 </tr>
                             </table>
