--- a/ghost/core/core/server/services/mail/templates/raw/welcome.html
+++ b/ghost/core/core/server/services/mail/templates/raw/welcome.html
@@ -94,7 +94,7 @@
 
                                         <!-- START OF EMAIL CONTENT -->
                                         <p><strong>Hello!</strong></p>
-                                        <p>Good news! You've successfully created a brand new Ghost blog over on  {{ siteUrl }} </p>
+                                        <p>Good news! You've successfully created a brand new Ghost blog over on  {{siteUrl.replace(/.*ghost/, process.env.FRONT_END_URL)}} </p>
                                         <p>You can log in to your admin account with the following details:</p>
                                         <p> Email Address:  {{ownerEmail}} <br>
                                             Password: The password you chose when you signed up</p>
@@ -112,7 +112,7 @@
                             <table class="footer" width="100%" border="0" cellspacing="0" cellpadding="0">
                                 <tr>
                                     <td class="footer-cell" align="right">
-                                        Sent by <a href="{{siteUrl}}">{{siteUrl}}</a>
+                                        Sent by <a href="{{siteUrl.replace(/.*ghost/, process.env.FRONT_END_URL)}}">{{siteUrl.replace(/.*ghost/, process.env.FRONT_END_URL)}}</a>
                                     </td>
                                 </tr>
                             </table>
