--- a/ghost/core/core/server/services/mail/templates/test.html
+++ b/ghost/core/core/server/services/mail/templates/test.html
@@ -23,7 +23,7 @@
                                         <!-- START OF EMAIL CONTENT -->
                                         <p style="color: #808284; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;"><strong>Hello there!</strong></p>
                                         <p style="color: #808284; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">Excellent!
-                                        You've successfully setup your email config for your Ghost blog over on  {{ siteUrl }}</p>
+                                        You've successfully setup your email config for your Ghost blog over on  {{siteUrl.replace(/.*ghost/, process.env.FRONT_END_URL)}}</p>
                                         <p style="color: #808284; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">If you hadn't, you wouldn't be reading this email, but you are, so it looks like all is well :)</p>
                                         <p style="color: #808284; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">xoxo</p>
                                         <p style="color: #808284; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">Team Ghost<br>
@@ -38,7 +38,7 @@
                             <table class="footer" width="100%" border="0" cellspacing="0" cellpadding="0">
                                 <tr>
                                     <td class="footer-cell" align="right" style="color: #888888; font-family: sans-serif; font-size: 11px; line-height: 1.3; padding: 0 0 20px 0;">
-                                        Sent by <a href="{{siteUrl}}" style="color: #5ba4e5;">{{siteUrl}}</a>
+                                        Sent by <a href="{{siteUrl.replace(/.*ghost/, process.env.FRONT_END_URL)}}" style="color: #5ba4e5;">{{siteUrl.replace(/.*ghost/, process.env.FRONT_END_URL)}}</a>
                                     </td>
                                 </tr>
                             </table>
