Improved verify modal and screen
ref https://linear.app/ghost/issue/ENG-2133/visual-tweaks
ref 33be7237a4

- There's a modal form of verify that happens in the editor if you try to save whilst logged out
- This mostly updates the modal to be the same as the screen
- I also simplified the screen button text to be just "Verify" like the modal
- Everything is now matching and simple

--- a/ghost/admin/app/templates/signin-verify.hbs
+++ b/ghost/admin/app/templates/signin-verify.hbs
@@ -48,7 +48,7 @@
                 </GhFormGroup>
 
                 <GhTaskButton
-                    @buttonText="Verify sign in &rarr;"
+                    @buttonText="Verify &rarr;"
                     @task={{this.verifyTokenTask}}
                     @showSuccess={{false}}
                     @class="login gh-btn gh-btn-login gh-btn-block gh-btn-icon"
