--- a/ghost/admin/app/components/editor/modals/re-verify.hbs
+++ b/ghost/admin/app/components/editor/modals/re-verify.hbs
@@ -17,7 +17,7 @@
                         type="text"
                         inputmode="numeric"
                         pattern="[0-9]*"
-                        placeholder="123456"
+                        placeholder="******"
                         autocomplete="one-time-code"
                         class="gh-input"
                         value={{this.token}}
@@ -54,7 +54,6 @@
             @useAccentColor={{true}}
             data-test-button="verify"
         />
-        <p class="main-notification">Not receiving the emails? <a href="https://ghost.org/docs/config/#mail" target="_blank" rel="noopener noreferrer">Learn more</a></p>
 
         {{#if (or this.flowErrors this.verifyData.validationMessage)}}
             <p class="response" data-test-error="verify">{{or this.flowErrors this.verifyData.validationMessage}}</p>
