--- a/ghost/admin/app/templates/signin-verify.hbs
+++ b/ghost/admin/app/templates/signin-verify.hbs
@@ -25,6 +25,7 @@
                             class="gh-input email"
                             value={{this.token}}
                             data-test-input="token"
+                            data-1p-ignore
                             {{on "input" this.handleTokenInput}}
                         />
 
