UI refinements for Traffic Analytics
ref PROD-228

- Some of the details on the current Analytics UI needs love

--- a/apps/stats/src/styles/index.css
+++ b/apps/stats/src/styles/index.css
@@ -13,4 +13,9 @@
     stroke-width: 1;
     stroke-linecap: round;
     stroke-linejoin: round;
+    outline: none !important;
+}
+
+.svg-map-container .svg-map path {
+    outline: none !important;
 }
