--- a/ghost/admin/app/components/posts/analytics.hbs
+++ b/ghost/admin/app/components/posts/analytics.hbs
@@ -37,7 +37,7 @@
                 <div style="display: flex; gap: 8px;">
                     {{#if (and (gh-user-can-admin this.session.user) this.config.stats)}}
                         <LinkTo class="gh-btn gh-btn-icon" @route="posts.analytics.posts-x" @model={{this.post.id}}>
-                            <span>{{svg-jar "stats" title="Post traffic stats"}} Traffic stats</span>
+                            <span>{{svg-jar "stats" title="Post web stats"}} Web stats</span>
                         </LinkTo>
                     {{/if}}
                     <GhTaskButton
