🎨 Improved "what's new" sidebar modal close button in dark mode
fixes #21901
Using CSS color variables over hard-coded hex color values provides some
smarter dark/light mode handling.

--- a/ghost/admin/app/styles/layouts/main.css
+++ b/ghost/admin/app/styles/layouts/main.css
@@ -2346,13 +2346,13 @@ section.gh-ds h2 {
     top: 4px;
     right: 8px;
     padding: 5px;
-    color: #ddd;
+    color: var(--midlightgrey);
     font-size: 2.2rem;
     line-height: 1;
 }
 
 .gh-sidebar-banner-close:hover {
-    color: #15171A;
+    color: var(--midgrey);
 }
 
 .gh-sidebar-banner a > strong {
