Revert "🐛 Fixed UI rendering blank spaced member names"
This reverts commit 23b0614c0b6423c64326605c7e0ea848e14cb0b1.

--- a/ghost/admin/app/components/gh-member-details.hbs
+++ b/ghost/admin/app/components/gh-member-details.hbs
@@ -14,15 +14,15 @@
             {{/if}}
             <div>
                 <h3>
-                    {{or (trim @member.name) @member.email}}
-                    {{#unless (or (trim @member.name) @member.email)}}
+                    {{or @member.name @member.email}}
+                    {{#unless (or @member.name @member.email)}}
                         {{#if @member.isNew}}
                         <span class="midgrey">New member</span>
                         {{/if}}
                     {{/unless}}
                 </h3>
                 <p>
-                    {{#if (and (trim @member.name) @member.email)}}
+                    {{#if (and @member.name @member.email)}}
                         <a href="mailto:{{@member.email}}">{{@member.email}}</a>
                     {{/if}}
                 </p>
