--- a/ghost/admin/app/components/posts/analytics.hbs
+++ b/ghost/admin/app/components/posts/analytics.hbs
@@ -35,7 +35,7 @@
                     {{/let}}
                 </div>
                 <div style="display: flex; gap: 8px;">
-                    {{#if (and (gh-user-can-admin this.session.user) this.config.stats (feature "statsX"))}}
+                    {{#if (and (gh-user-can-admin this.session.user) this.config.stats (feature "trafficAnalyticsAlpha"))}}
                         <LinkTo class="gh-btn gh-btn-icon" @route="posts.analytics.posts-x" @model={{this.post.id}}>
                             <span>{{svg-jar "stats" title="Post web stats"}} Web stats</span>
                         </LinkTo>
