--- a/ghost/admin/app/components/gh-member-details-activity.hbs
+++ b/ghost/admin/app/components/gh-member-details-activity.hbs
@@ -15,16 +15,12 @@
                 {{/if}}
                 <div>
                     <h3>
-                        {{#if @member.name}}
-                            {{@member.name}}
-                        {{else}}
-                            {{@member.email}}
-                            {{#unless @member.email}}
-                                {{#if @member.isNew}}
-                                <span class="midgrey">New member</span>
-                                {{/if}}
-                            {{/unless}}
-                        {{/if}}
+                        {{or @member.name @member.email}}
+                        {{#unless (or @member.name @member.email)}}
+                            {{#if @member.isNew}}
+                            <span class="midgrey">New member</span>
+                            {{/if}}
+                        {{/unless}}
                     </h3>
                     <p>
                         {{#if (and @member.name @member.email)}}
