Added labs test to investigate impact of email bg color on cards
no issue

- added temporary `emailCustomizationInvestigation` labs flag
- used flag in email template and styles to force a fixed bg color when enabled
- updated email related tests to run without the new flag enabled

--- a/ghost/email-service/lib/email-templates/partials/styles.hbs
+++ b/ghost/email-service/lib/email-templates/partials/styles.hbs
@@ -18,6 +18,9 @@ img.is-dark-background {
 
 body {
     background-color: #fff;
+    {{#hasFeature "emailCustomizationInvestigation"}}
+    background-color: #f0c5c2;
+    {{/hasFeature}}
     font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     font-size: 18px;
@@ -48,6 +51,9 @@ table td {
 ------------------------------------- */
 .body {
     background-color: #fff;
+    {{#hasFeature "emailCustomizationInvestigation"}}
+    background-color: #f0c5c2;
+    {{/hasFeature}}
     width: 100%;
 }
 
@@ -522,7 +528,7 @@ figure blockquote p {
     color: #15212A;
     font-size: 13px !important;
     font-weight: 500;
-    margin: 1em 0 0 0; 
+    margin: 1em 0 0 0;
     line-height: 1.4em;
     word-break: break-word;
 }
@@ -1166,7 +1172,7 @@ img.kg-cta-image {
 }
 
 .kg-cta-minimal a.kg-cta-button {
-    display: inline-block; 
+    display: inline-block;
     font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif;
     font-size: 0.85em;
     font-weight: 600;
@@ -1180,7 +1186,7 @@ img.kg-cta-image {
 }
 
 .kg-cta-immersive a.kg-cta-button {
-    display: inline-block; 
+    display: inline-block;
     width: 100%;
     font-size: 0.9em;
     font-weight: 600;
@@ -1467,6 +1473,9 @@ img.kg-cta-image {
 ------------------------------------- */
 .main {
     background: #ffffff;
+    {{#hasFeature "emailCustomizationInvestigation"}}
+    background-color: #f0c5c2;
+    {{/hasFeature}}
     border-radius: 3px;
     border-spacing: 20px 0;
     width: 100%;
@@ -1983,7 +1992,7 @@ img.kg-cta-image {
     table.body .kg-cta-minimal .kg-cta-content-inner {
         display: inline-block !important;
         width: 100% !important;
-        padding: 0 !important; 
+        padding: 0 !important;
     }
 
     table.body .kg-cta-minimal img.kg-cta-image {
