--- a/ghost/email-service/lib/email-templates/template.hbs
+++ b/ghost/email-service/lib/email-templates/template.hbs
@@ -153,7 +153,7 @@
 
                             {{#if (or feedbackButtons newsletter.showCommentCta) }}
                                 <tr>
-                                    <td dir="ltr" width="100%" style="background-color: #ffffff; text-align: center; padding: 32px 0 24px; border-bottom: 1px solid #e0e7eb;" align="center">
+                                    <td dir="ltr" width="100%" style="background-color: #ffffff;{{#hasFeature "emailCustomizationInvestigation"}}background-color: #f0c5c2;{{/hasFeature}} text-align: center; padding: 32px 0 24px; border-bottom: 1px solid #e0e7eb;" align="center">
                                         <table class="feedback-buttons" role="presentation" border="0" cellpadding="0" cellspacing="0">
                                             <tr>
                                                 {{#if feedbackButtons }}
