Improved Post Analytics overview
ref https://linear.app/ghost/issue/PROD-658/add-growth-tab-to-post-analytics-context

- When Traffic Analytics beta is on the visuals of web-only posts looked off

--- a/ghost/admin/app/styles/layouts/content.css
+++ b/ghost/admin/app/styles/layouts/content.css
@@ -2270,11 +2270,11 @@ span.dropdown .gh-post-list-cta > span {
 }
 .feature-trafficAnalytics .gh-post-analytics-sidebar-item:hover {
     color: var(--black);
-    background: var(--whitegrey);
+    background: var(--whitegrey-l1);
 }
 
 .feature-trafficAnalytics .gh-post-analytics-sidebar-item.active {
-    background: var(--whitegrey);
+    background: var(--whitegrey-l1);
     color: var(--black);
     font-weight: 600;
 }
@@ -2292,6 +2292,10 @@ span.dropdown .gh-post-list-cta > span {
     padding: 20px 0 0;
     margin: 0 24px;
     border-bottom: 1px solid var(--whitegrey);
+}
+
+.feature-trafficAnalytics .gh-tabs-analytics.no-tabs {
+    padding: 20px 0;
 }
 
 .feature-trafficAnalytics .gh-tabs-analytics .tab-list .tab {
@@ -2394,6 +2398,10 @@ span.dropdown .gh-post-list-cta > span {
 
 .feature-trafficAnalytics .gh-tabs-analytics .tab-panel {
     background: none;
+}
+
+.feature-trafficAnalytics .gh-tabs-analytics.no-tabs .tab-selected:before {
+    display: none;
 }
 
 @media (max-width: 1320px) {
