Improved Growth tabs in Traffic Analytics
ref https://linear.app/ghost/issue/PROD-657/add-growth-tab-to-sitewide-context

- A couple of minor details on the Traffic Analytics Growth tab were off: thousand separator was missing, padding on post analytics page was off etc.

--- a/ghost/admin/app/styles/layouts/content.css
+++ b/ghost/admin/app/styles/layouts/content.css
@@ -2294,6 +2294,10 @@ span.dropdown .gh-post-list-cta > span {
     border-bottom: 1px solid var(--whitegrey);
 }
 
+.feature-trafficAnalytics .gh-tabs-analytics.no-tabs .tab-panel-selected {
+    margin: 0 24px;
+}
+
 .feature-trafficAnalytics .gh-tabs-analytics.no-tabs {
     padding: 20px 0;
 }
