--- a/ghost/core/core/frontend/src/cards/css/cta.css
+++ b/ghost/core/core/frontend/src/cards/css/cta.css
@@ -60,8 +60,8 @@
     padding-top: 0;
 }
 
-.kg-cta-has-img .kg-cta-sponsor-label-wrapper:not(.kg-cta-bg-none.kg-cta-has-dividers .kg-cta-sponsor-label-wrapper):not(.kg-cta-minimal .kg-cta-sponsor-label-wrapper),
-.kg-cta-bg-none .kg-cta-sponsor-label-wrapper:not(.kg-cta-bg-none.kg-cta-has-dividers .kg-cta-sponsor-label-wrapper) {
+.kg-cta-has-img .kg-cta-sponsor-label-wrapper:not(.kg-cta-bg-none .kg-cta-sponsor-label-wrapper):not(.kg-cta-minimal .kg-cta-sponsor-label-wrapper),
+.kg-cta-bg-none.kg-cta-no-dividers .kg-cta-sponsor-label-wrapper {
     border-bottom: 0;
 }
 
@@ -111,24 +111,21 @@
 }
 
 .kg-cta-bg-none .kg-cta-content {
-    padding: 0;
-}
-
-.kg-cta-bg-none.kg-cta-has-dividers .kg-cta-sponsor-label-wrapper + .kg-cta-content {
-    padding-top: 1.5em;
-}
-
-.kg-cta-has-dividers.kg-cta-bg-none .kg-cta-content {
     padding: 1.5em 0;
     border-bottom: 1px solid rgba(124, 139, 154, 0.2);
 }
 
-.kg-cta-has-dividers.kg-cta-bg-none .kg-cta-content:not(.kg-cta-sponsor-label-wrapper + .kg-cta-content) {
+.kg-cta-bg-none.kg-cta-no-dividers .kg-cta-content {
+    padding: 0;
+    border-bottom: none;
+}
+
+.kg-cta-bg-none:not(.kg-cta-no-dividers) .kg-cta-content:not(.kg-cta-sponsor-label-wrapper + .kg-cta-content) {
     border-top: 1px solid rgba(124, 139, 154, 0.2);
 }
 
 @media (max-width: 600px) {
-    .kg-cta-has-dividers.kg-cta-bg-none .kg-cta-content {
+    .kg-cta-bg-none .kg-cta-content {
         padding: 1.25em 0;
     }
 }
