--- a/ghost/core/core/server/services/email-service/email-templates/template.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/template.hbs
@@ -135,7 +135,7 @@
                                             {{/if}}
                                         {{/if}}
                                         <tr class="post-content-row">
-                                            <td class="{{classes.body}}">
+                                            <td class="{{classes.body}} {{classes.header}}">
                                                 <!-- POST CONTENT START -->
                                                 {{{html}}}
                                                 <!-- POST CONTENT END -->
